--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,66 +1,61 @@
 ﻿@page
 @model RegisterModel
-@{
-    ViewData["Title"] = "Register";
-}
 
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<!-- start: page -->
+<section class="body-sign">
+    <div class="center-sign">
+        <a href="/" class="logo pull-left">
+            <img src="assets/images/logo.png" height="54" alt="logo_registro" />
+        </a>
+        <div class="panel panel-sign">
+            <div class="panel-title-sign mt-xl text-right">
+                <h2 class="title text-uppercase text-weight-bold m-none"><i class="fa fa-user mr-xs"></i>Registrarse
+                </h2>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.Password"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
+            <div class="panel-body">
+                <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                    <div class="form-group mb-lg">
+                        <labe asp-for="Input.Email" l>Correo electrónico</labe>
+                        <input type="email" class="form-control input-lg" asp-for="Input.Email"/>
                     </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
+                    <div class="form-group mb-none">
+                        <div class="row">
+                            <div class="col-sm-6 mb-lg">
+                                <label asp-for="Input.Password">Contraseña</label>
+                                <input type="password" class="form-control input-lg" asp-for="Input.Password"/>
+                            </div>
+                            <div class="col-sm-6 mb-lg">
+                                <label asp-for="Input.ConfirmPassword">Confirmación de contraseña</label>
+                                <input  type="password" class="form-control input-lg" asp-for="Input.ConfirmPassword"/>
+                            </div>
                         </div>
-                    </form>
-                }
-            }
-        </section>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-8">
+                            <div class="checkbox-custom checkbox-default">
+                                <input id="AgreeTerms"  type="checkbox" />
+                                <label >Estoy de acuerdo con los <a href="#">términos de uso</a></label>
+                            </div>
+                        </div>
+                        <div class="col-sm-4 text-right">
+                            <button id="registerSubmit" type="submit"
+                                class="btn btn-primary hidden-xs">Registrar</button>
+                            <button id="registerSubmit" type="submit"
+                                class="btn btn-primary btn-block btn-lg visible-xs mt-lg">Registrar</button>
+                        </div>
+                    </div>
+                    <span class="mt-lg mb-lg line-thru text-center text-uppercase">
+                        <span>o</span>
+                    </span>
+                    <p class="text-center">¿Ya tienes una cuenta? <a asp-area="Identity"
+                            asp-page="/Account/Login">¡Iniciar sesión!</a></p>
+                </form>
+            </div>
+        </div>
+        <p class="text-center text-muted mt-md mb-md">&copy; Copyright 2023. All Rights Reserved.</p>
     </div>
-</div>
+</section>
+<!-- end: page -->
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
