--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -313,7 +313,7 @@
                                             class="fa fa-lock"></i> Registrar</a>
                                 </li>
                                 <li>
-                                    <a role="menuitem" tabindex="-1" href="pages-signin.html">
+                                    <a role="menuitem" tabindex="-1" href="#modalIcon">
                                         <i class="fa fa-power-off"></i> Logout
                                     </a>
                                 </li>
@@ -507,6 +507,34 @@
             </div>
         </aside>
     </section>
+
+<!-- Modal Icon -->
+									<div id="modalIcon" class="modal-block modal-block-primary mfp-hide">
+										<section class="panel">
+											<header class="panel-heading">
+												<h2 class="panel-title">Are you sure?</h2>
+											</header>
+											<div class="panel-body">
+												<div class="modal-wrapper">
+													<div class="modal-icon">
+														<i class="fa fa-question-circle"></i>
+													</div>
+													<div class="modal-text">
+														<p>Are you sure that you want to delete this image?</p>
+													</div>
+												</div>
+											</div>
+											<footer class="panel-footer">
+												<div class="row">
+													<div class="col-md-12 text-right">
+														<button class="btn btn-primary modal-confirm">Confirm</button>
+														<button class="btn btn-default modal-dismiss">Cancel</button>
+													</div>
+												</div>
+											</footer>
+										</section>
+									</div>
+
     <environment include="Development">
         <!-- Vendor -->
         <script type="text/javascript" src="@Url.Content("~/lib/jquery/dist/jquery.js")"></script>
@@ -530,6 +558,8 @@
 
         <!-- Theme Initialization Files -->
         <script src="/template/assets/javascripts/theme.init.js"></script>
+        		<!-- Examples -->
+		<script src="/template/assets/javascripts/ui-elements/examples.modals.js"></script>
 
         <script type="text/javascript"
             src="//cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.12.1/af-2.4.0/b-2.2.3/b-colvis-2.2.3/b-html5-2.2.3/b-print-2.2.3/cr-1.5.6/date-1.1.2/fc-4.1.0/fh-3.2.4/kt-2.7.0/r-2.3.0/rg-1.2.0/rr-1.2.8/sc-2.0.7/sb-1.3.4/sp-2.0.2/sl-1.4.0/sr-1.1.1/datatables.min.js"></script>
