--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Inicio";
 }
-<h1>@ViewData["Title"]</h1>
+<h1><a asp-area="Identity" asp-page="/Account/Login">Inicio</a></h1>
 
 <p>Bienvenid@s.</p>
