--- a/Areas/Catalogs/Views/Areas/Create.cshtml
+++ b/Areas/Catalogs/Views/Areas/Create.cshtml
@@ -6,35 +6,38 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h1>Create</h1>
-
-<h4>cat_area</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-           	<div class="form-group">
-												<label class="col-md-3 control-label" asp-for="area_desc"></label>
-												<div class="col-md-6">
-													<div class="input-group input-group-icon">
-														<input type="text" class="form-control" placeholder="Right icon" asp-for="area_desc">
-														<span class="input-group-addon">
-															<span class="icon"><i class="fa fa-user"></i></span>
-														</span>
-													</div>
-                                                    <span asp-validation-for="area_desc" class="text-danger"></span>
-												</div>
-											</div>
-            <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-primary" />
-                 <a asp-action="Index" class="btn btn-secondary">Regresar</a>
-            </div>
+            <section class="panel">
+                <header class="panel-heading">
+                    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Catálogos Empresas / </span>Crear
+                        Área</h4>
+                </header>
+                <div class="panel-body">
+                    <label class="col-md-3 control-label" asp-for="area_desc"></label>
+                    <div class="col-md-6">
+                        <div class="input-group input-group-icon">
+                            <input type="text" class="form-control" placeholder="Área" asp-for="area_desc">
+                            <span class="input-group-addon">
+                                <span class="icon"><i class="fa-solid fa-briefcase"></i></span>
+                            </span>
+                        </div>
+                       <span asp-validation-for="area_desc" class="text-danger"></span>
+                    </div>
+                </div>
+                <footer class="panel-footer">
+                    <input type="submit" value="Crear" class="btn btn-success" />
+                    <a asp-action="Index" class="btn btn-primary">Regresar</a>
+                </footer>
+            </section>
         </form>
     </div>
 </div>
 
 @section Scripts {
-
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
