--- a/Areas/Catalogs/Views/Areas/Delete.cshtml
+++ b/Areas/Catalogs/Views/Areas/Delete.cshtml
@@ -6,43 +6,49 @@
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>cat_area</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.area_desc)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.area_desc)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.id_usuario_modifico)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.id_usuario_modifico)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.fecha_registro)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.fecha_registro)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.id_estatus_registro)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.id_estatus_registro)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="id_area" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="row">
+    <div class="col-md-12">
+        <form asp-action="Delete">
+            <section class="panel">
+                <header class="panel-heading">
+                    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Catálogos Empresas /
+                        </span>Desactivar
+                        Área</h4>
+                </header>
+                <div class="panel-body">
+                    <dl class="row">
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.area_desc)
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Html.DisplayFor(model => model.area_desc)
+                        </dd>
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.id_usuario_modifico)
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Html.DisplayFor(model => model.id_usuario_modifico)
+                        </dd>
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.fecha_registro)
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Html.DisplayFor(model => model.fecha_registro)
+                        </dd>
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.id_estatus_registro)
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Html.DisplayFor(model => model.id_estatus_registro)
+                        </dd>
+                    </dl>
+                </div>
+                <footer class="panel-footer">
+                    <input type="hidden" asp-for="id_area" />
+                    <input type="submit" value="Desactivar" class="btn btn-danger" />
+                    <a asp-action="Index" class="btn btn-primary">Regresar</a>
+                </footer>
+            </section>
+        </form>
+    </div>
 </div>
