--- a/Areas/Catalogs/Views/Areas/Details.cshtml
+++ b/Areas/Catalogs/Views/Areas/Details.cshtml
@@ -6,37 +6,47 @@
     ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h1>Details</h1>
-
-<div>
-    <h4>cat_area</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.area_desc)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.area_desc)
-        </dd>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.id_usuario_modifico)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.fecha_registro)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.fecha_registro)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.id_estatus_registro)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.id_estatus_registro)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.id_area">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="row">
+    <div class="col-md-12">
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <section class="panel">
+                <header class="panel-heading">
+                    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Catálogos Empresas / </span>Crear
+                        Área</h4>
+                </header>
+                <div class="panel-body">
+                     <dl class="row">
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.area_desc)
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Html.DisplayFor(model => model.area_desc)
+                        </dd>
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.id_usuario_modifico)
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Html.DisplayFor(model => model.id_usuario_modifico)
+                        </dd>
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.fecha_registro)
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Html.DisplayFor(model => model.fecha_registro)
+                        </dd>
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.id_estatus_registro)
+                        </dt>
+                        <dd class="col-sm-10">
+                            @Html.DisplayFor(model => model.id_estatus_registro)
+                        </dd>
+                    </dl>
+                </div>
+                <footer class="panel-footer">
+                    <a asp-action="Index" class="btn btn-primary">Regresar</a>
+                </footer>
+            </section>
+        </form>
+    </div>
 </div>
