--- a/Areas/Catalogs/Views/Areas/Edit.cshtml
+++ b/Areas/Catalogs/Views/Areas/Edit.cshtml
@@ -6,40 +6,49 @@
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h1>Edit</h1>
-
-<h4>cat_area</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+         
             <input type="hidden" asp-for="id_area" />
-            <div class="form-group">
-                <label asp-for="area_desc" class="control-label"></label>
-                <input asp-for="area_desc" class="form-control" />
-                <span asp-validation-for="area_desc" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="id_usuario_modifico" class="control-label"></label>
-                <input asp-for="id_usuario_modifico" class="form-control" />
-                <span asp-validation-for="id_usuario_modifico" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="id_estatus_registro" class="control-label"></label>
-                <input asp-for="id_estatus_registro" class="form-control" />
-                <span asp-validation-for="id_estatus_registro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
+            <section class="panel">
+                <header class="panel-heading">
+                    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Catálogos Empresas / </span>Editar
+                        Área</h4>
+                </header>
+                <div class="panel-body">
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" asp-for="area_desc"></label>
+                        <div class="col-md-6">
+                            <div class="input-group input-group-icon">
+                                <input type="text" class="form-control" placeholder="Área" asp-for="area_desc">
+                                <span class="input-group-addon">
+                                    <span class="icon"><i class="fa-solid fa-briefcase"></i></span>
+                                </span>
+                            </div>
+                           <span asp-validation-for="area_desc" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" asp-for="id_estatus_registro"></label>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <select class="form-control mb-md" required asp-for="id_estatus_registro"
+                                    asp-items="@(new SelectList(ViewBag.ListaCatEstatus,"id_estatus","estatus_desc"))">
+                                    <option value="">SELECCIONAR</option>
+                                </select>
+                            </div>
+                            <span asp-validation-for="id_estatus_registro" class="text-danger"></span>
+                        </div>
+                    </div>
+                </div>
+                <footer class="panel-footer">
+                    <input type="submit" value="Editar" class="btn btn-warning" />
+                    <a asp-action="Index" class="btn btn-primary">Regresar</a>
+                </footer>
+            </section>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
