--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,85 +1,80 @@
 ﻿@page
 @model LoginModel
 
-@{
-    ViewData["Title"] = "Log in";
-}
+<!-- start: page -->
+<section class="body-sign">
+    <div class="center-sign">
+        <a href="/" class="logo pull-left">
+            <img src="/template/assets/images/logo.png" height="54" alt="EAC" />
+        </a>
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
-                <hr />
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                    <label asp-for="Input.Email" class="form-label"></label>
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-floating">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                    <label asp-for="Input.Password" class="form-label"></label>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div>
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe" class="form-label">
-                            <input class="form-check-input" asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
-                    </div>
-                </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-                </div>
-                <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
-                </div>
-            </form>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to log in.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
+        <div class="panel panel-sign">
+            <div class="panel-title-sign mt-xl text-right">
+                <h2 class="title text-uppercase text-weight-bold m-none"><i class="fa-solid fa-user-shield"></i> Iniciar
+                    sesión</h2>
+            </div>
+            <div class="panel-body">
+                <form id="account" method="post">
+                    <div class="form-group mb-lg">
+                        <label asp-for="Input.Email">Nombre de usuario</label>
+                        <div class="input-group input-group-icon">
+                            <input type="text" class="form-control input-lg" asp-for="Input.Email" />
+                            <span class="input-group-addon">
+                                <span class="icon icon-lg">
+                                    <i class="fa-regular fa-user"></i>
+                                </span>
+                            </span>
                         </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div>
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
 
+                    <div class="form-group mb-lg">
+                        <div class="clearfix">
+                            <label class="pull-left" asp-for="Input.Password">Contraseña</label>
+                            <a class="pull-right" id="forgot-password" asp-page="./ForgotPassword">¿Contraseña
+                                perdida?</a>
+                        </div>
+                        <div class="input-group input-group-icon">
+                            <input type="password" class="form-control input-lg" asp-for="Input.Password" />
+                            <span class="input-group-addon">
+                                <span class="icon icon-lg">
+                                    <i class="fa-solid fa-key"></i>
+                                </span>
+                            </span>
+                        </div>
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-sm-8">
+                            <div class="checkbox-custom checkbox-default">
+                                <input id="RememberMe" name="rememberme" type="checkbox" asp-for="Input.RememberMe" />
+                                <label for="RememberMe" asp-for="Input.RememberMe">Recordar?</label>
+                            </div>
+                        </div>
+                        <div class="col-sm-4 text-right">
+                            <button class="btn btn-primary hidden-xs" id="login-submit" type="submit">Iniciar sesión</button>
+                            <button class="btn btn-primary btn-block btn-lg visible-xs mt-lg" id="login-submit" type="submit">Iniciar sesión</button>
+                        </div>
+                    </div>
+
+                    <span class="mt-lg mb-lg line-thru text-center text-uppercase">
+                        <span>or</span>
+                    </span>
+                    <p class="text-center">¿Aún no tienes una cuenta? <a asp-page="./Register"
+                            asp-route-returnUrl="@Model.ReturnUrl">¡Inscribirse!</a></p>
+                    <p class="text-center">
+                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Reenviar correo electrónico de
+                            confirmación</a>
+                    </p>
+                </form>
+            </div>
+        </div>
+
+        <p class="text-center text-muted mt-md mb-md">&copy; Copyright 2023. Todos los derechos reservados.</p>
+    </div>
+</section>
+<!-- end: page -->
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
