--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,30 +1,264 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Profile";
-    ViewData["ActivePage"] = ManageNavPages.Index;
+    ViewData["Title"] = "Perfil";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
+<section role="main" class="content-body">
+    <header class="page-header">
+        <h2>Perfil del usuario</h2>
 
-<h3>@ViewData["Title"]</h3>
-<partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
-        <form id="profile-form" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Username" class="form-control" disabled />
-                <label asp-for="Username" class="form-label"></label>
+        <div class="right-wrapper pull-right">
+            <ol class="breadcrumbs">
+                <li>
+                    <a href="index.html">
+                        <i class="fa fa-home"></i>
+                    </a>
+                </li>
+                <li><span>Administracion</span></li>
+                <li><span>Perfil del usuario</span></li>
+            </ol>
+
+            <a class="sidebar-right-toggle" data-open="sidebar-right"><i class="fa fa-chevron-left"></i></a>
+        </div>
+    </header>
+
+    <!-- start: page -->
+
+    <div class="row">
+        <div class="col-md-4 col-lg-3">
+
+            <section class="panel">
+                <div class="panel-body">
+                    <div class="thumb-info mb-md">
+                        <img src="assets/images/!logged-user.jpg" class="rounded img-responsive" alt="John Doe">
+                        <div class="thumb-info-title">
+                            <span class="thumb-info-inner">John Doe</span>
+                            <span class="thumb-info-type">CEO</span>
+                        </div>
+                    </div>
+
+                    <div class="widget-toggle-expand mb-md">
+                        <div class="widget-header">
+                            <h6>Profile Completion</h6>
+                            <div class="widget-toggle">+</div>
+                        </div>
+                        <div class="widget-content-collapsed">
+                            <div class="progress progress-xs light">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                                    aria-valuemax="100" style="width: 60%;">
+                                    60%
+                                </div>
+                            </div>
+                        </div>
+                        <div class="widget-content-expanded">
+                            <ul class="simple-todo-list">
+                                <li class="completed">Update Profile Picture</li>
+                                <li class="completed">Change Personal Information</li>
+                                <li>Update Social Media</li>
+                                <li>Follow Someone</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <hr class="dotted short">
+
+                    <h6 class="text-muted">About</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis vulputate quam. Interdum et
+                        malesuada</p>
+                    <div class="clearfix">
+                        <a class="text-uppercase text-muted pull-right" href="#">(View All)</a>
+                    </div>
+
+                    <hr class="dotted short">
+
+                    <div class="social-icons-list">
+                        <a rel="tooltip" data-placement="bottom" target="_blank" href="http://www.facebook.com"
+                            data-original-title="Facebook"><i class="fa fa-facebook"></i><span>Facebook</span></a>
+                        <a rel="tooltip" data-placement="bottom" href="http://www.twitter.com"
+                            data-original-title="Twitter"><i class="fa fa-twitter"></i><span>Twitter</span></a>
+                        <a rel="tooltip" data-placement="bottom" href="http://www.linkedin.com"
+                            data-original-title="Linkedin"><i class="fa fa-linkedin"></i><span>Linkedin</span></a>
+                    </div>
+
+                </div>
+            </section>
+        </div>
+        <div class="col-md-8 col-lg-6">
+
+            <div class="tabs">
+                <ul class="nav nav-tabs tabs-primary">
+                    <li >
+                        <a href="#edit" data-toggle="tab">Edit</a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <div id="edit" class="tab-pane">
+                        <form id="profile-form" method="post">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <h4 class="mb-xlg">Personal Information</h4>
+                            <fieldset>
+                                <div class="form-group">
+                                    <label class="col-md-3 control-label" for="profileFirstName">First Name</label>
+                                    <div class="col-md-8">
+                                        <input type="text" class="form-control" id="profileFirstName">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-md-3 control-label" for="profileLastName">Last Name</label>
+                                    <div class="col-md-8">
+                                        <input type="text" class="form-control" id="profileLastName">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-md-3 control-label" for="profileAddress">Address</label>
+                                    <div class="col-md-8">
+                                        <input type="text" class="form-control" id="profileAddress">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-md-3 control-label" for="profileCompany">Company</label>
+                                    <div class="col-md-8">
+                                        <input type="text" class="form-control" id="profileCompany">
+                                    </div>
+                                </div>
+                                <div class="form-floating">
+                                    <input asp-for="Username" class="form-control" disabled />
+                                    <label asp-for="Username" class="form-label"></label>
+                                </div>
+                                <div class="form-floating">
+                                    <input asp-for="Input.PhoneNumber" class="form-control" />
+                                    <label asp-for="Input.PhoneNumber" class="form-label"></label>
+                                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                                </div>
+                            </fieldset>
+                            <hr class="dotted tall">
+                            <h4 class="mb-xlg">About Yourself</h4>
+                            <fieldset>
+                                <div class="form-group">
+                                    <label class="col-md-3 control-label" for="profileBio">Biographical Info</label>
+                                    <div class="col-md-8">
+                                        <textarea class="form-control" rows="3" id="profileBio"></textarea>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-xs-3 control-label mt-xs pt-none">Public</label>
+                                    <div class="col-md-8">
+                                        <div class="checkbox-custom checkbox-default checkbox-inline mt-xs">
+                                            <input type="checkbox" checked="" id="profilePublic">
+                                            <label for="profilePublic"></label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </fieldset>
+                            <hr class="dotted tall">
+                            <h4 class="mb-xlg">Change Password</h4>
+                            <fieldset class="mb-xl">
+                                <div class="form-group">
+                                    <label class="col-md-3 control-label" for="profileNewPassword">New Password</label>
+                                    <div class="col-md-8">
+                                        <input type="text" class="form-control" id="profileNewPassword">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-md-3 control-label" for="profileNewPasswordRepeat">Repeat New
+                                        Password</label>
+                                    <div class="col-md-8">
+                                        <input type="text" class="form-control" id="profileNewPasswordRepeat">
+                                    </div>
+                                </div>
+                            </fieldset>
+                            <div class="panel-footer">
+                                <div class="row">
+                                    <div class="col-md-9 col-md-offset-3">
+                                        <button id="update-profile-button" type="submit"
+                                            class="w-100 btn btn-lg btn-primary">Save</button>
+                                        <button type="reset" class="btn btn-default">Reset</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </form>
+
+                    </div>
+                </div>
             </div>
-            <div class="form-floating">
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <label asp-for="Input.PhoneNumber" class="form-label"></label>
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
-            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
-        </form>
+        </div>
+        <div class="col-md-12 col-lg-3">
+
+            <h4 class="mb-md">Sale Stats</h4>
+            <ul class="simple-card-list mb-xlg">
+                <li class="primary">
+                    <h3>488</h3>
+                    <p>Nullam quris ris.</p>
+                </li>
+                <li class="primary">
+                    <h3>$ 189,000.00</h3>
+                    <p>Nullam quris ris.</p>
+                </li>
+                <li class="primary">
+                    <h3>16</h3>
+                    <p>Nullam quris ris.</p>
+                </li>
+            </ul>
+
+            <h4 class="mb-md">Projects</h4>
+            <ul class="simple-bullet-list mb-xlg">
+                <li class="red">
+                    <span class="title">Porto Template</span>
+                    <span class="description truncate">Lorem ipsom dolor sit.</span>
+                </li>
+                <li class="green">
+                    <span class="title">Tucson HTML5 Template</span>
+                    <span class="description truncate">Lorem ipsom dolor sit amet</span>
+                </li>
+                <li class="blue">
+                    <span class="title">Porto HTML5 Template</span>
+                    <span class="description truncate">Lorem ipsom dolor sit.</span>
+                </li>
+                <li class="orange">
+                    <span class="title">Tucson Template</span>
+                    <span class="description truncate">Lorem ipsom dolor sit.</span>
+                </li>
+            </ul>
+
+            <h4 class="mb-md">Messages</h4>
+            <ul class="simple-user-list mb-xlg">
+                <li>
+                    <figure class="image rounded">
+                        <img src="assets/images/!sample-user.jpg" alt="Joseph Doe Junior" class="img-circle">
+                    </figure>
+                    <span class="title">Joseph Doe Junior</span>
+                    <span class="message">Lorem ipsum dolor sit.</span>
+                </li>
+                <li>
+                    <figure class="image rounded">
+                        <img src="assets/images/!sample-user.jpg" alt="Joseph Junior" class="img-circle">
+                    </figure>
+                    <span class="title">Joseph Junior</span>
+                    <span class="message">Lorem ipsum dolor sit.</span>
+                </li>
+                <li>
+                    <figure class="image rounded">
+                        <img src="assets/images/!sample-user.jpg" alt="Joe Junior" class="img-circle">
+                    </figure>
+                    <span class="title">Joe Junior</span>
+                    <span class="message">Lorem ipsum dolor sit.</span>
+                </li>
+                <li>
+                    <figure class="image rounded">
+                        <img src="assets/images/!sample-user.jpg" alt="Joseph Doe Junior" class="img-circle">
+                    </figure>
+                    <span class="title">Joseph Doe Junior</span>
+                    <span class="message">Lorem ipsum dolor sit.</span>
+                </li>
+            </ul>
+        </div>
+
     </div>
-</div>
-
+    <!-- end: page -->
+</section>
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+
 }
