--- a/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
@@ -18,7 +18,7 @@
             <div class="form-floating">
                 <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" />
                 <label asp-for="Input.NewPassword" class="form-label"></label>
-                <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
+                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-floating">
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" />
