--- a/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -1,26 +1,40 @@
 ﻿@page
 @model ResendEmailConfirmationModel
-@{
-    ViewData["Title"] = "Resend email confirmation";
-}
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" aria-required="true" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<section class="body-sign">
+    <div class="center-sign">
+        <a href="/" class="logo pull-left">
+            <img src="/template/assets/images/logo.png" height="54" alt="EAC" />
+        </a>
+        <div class="panel panel-sign">
+            <div class="panel-title-sign mt-xl text-right">
+                <h2 class="title text-uppercase text-weight-bold m-none"><i class="fa fa-user mr-xs"></i> Reenviar
+                    correo </h2>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Resend</button>
-        </form>
-    </div>
-</div>
+            <div class="panel-body">
+                <div class="alert alert-info">
+                    <p class="m-none text-weight-semibold h6">¡Ingrese su correo electrónico a continuación y le
+                        enviaremos instrucciones de reinicio!</p>
+                </div>
+                <form method="post">
+                    <div class="form-group mb-none">
+                        <div class="input-group">
+                              <input type="text" class="form-control input-lg" asp-for="Input.Email" />
+                            <span class="input-group-btn">
+                                <button class="btn btn-primary btn-lg" type="submit">¡Reiniciar!</button>
+                            </span>
+                        </div>
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <p class="text-center mt-lg">¿Recordada? <a asp-area="Identity" asp-page="/Account/Login">¡Iniciar
+                            sesión!</a></p>
+                </form>
+            </div>
+        </div>
 
+        <p class="text-center text-muted mt-md mb-md">&copy; Copyright 2023. Todos los derechos reservados.</p>
+    </div>
+</section>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
