--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,15 +7,15 @@
 <html class="fixed sidebar-left-collapsed">
 
 <head>
-
+    <html lang="es-mx" xml:lang="es-mx" xmlns="http://www.w3.org/1999/xhtml">
     <!-- Basic -->
     <meta charset="UTF-8">
 
     <title>Ease Admin Cloud - iIDes Tec</title>
     <meta name="keywords" content="HTML5 Admin Template" />
-    <meta name="description" content="Porto Admin - Responsive HTML5 Template">
-    <meta name="author" content="okler.net">
-
+    <meta name="description" content="comercio electrónico">
+    <meta name="author" content="iides">
+<link rel="icon" type="image/png" href="/template/assets/images/icon.png"/>
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
@@ -28,7 +28,6 @@
     <!-- Vendor CSS -->
     <link rel="stylesheet" href="/template/assets/vendor/bootstrap/css/bootstrap.css" />
 
-    <link rel="stylesheet" href="/template/assets/vendor/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="/template/assets/vendor/magnific-popup/magnific-popup.css" />
     <link rel="stylesheet" href="/template/assets/vendor/bootstrap-datepicker/css/bootstrap-datepicker3.css" />
 
@@ -64,7 +63,7 @@
             <header class="header" id="header">
                 <div class="logo-container">
                     <a href="../1.7.0" class="logo">
-                        <img src="/template/assets/images/logo.png" width="75" height="35" alt="Porto Admin" />
+                        <img src="/template/assets/images/logo.png" width="75" height="35" alt="EAC" />
                     </a>
                     <div class="visible-xs toggle-sidebar-left" data-toggle-class="sidebar-left-opened" data-target="html"
                         data-fire-event="sidebar-left-opened">
@@ -299,23 +298,18 @@
                             <ul class="list-unstyled">
                                 <li class="divider"></li>
                                 <li>
-                                    <a role="menuitem" tabindex="-1" href="pages-user-profile.html">
-                                        <i class="fa fa-user"></i> My Profile
+                                    <a role="menuitem" asp-area="Identity" asp-page="/Account/Manage/Index"><i class="fa-solid fa-user-pen"></i> Mi Perfil
                                     </a>
                                 </li>
                                 <li>
-                                    <a role="menuitem" tabindex="-1" href="#" data-lock-screen="true">
-                                        <i class="fa fa-lock"></i> Lock Screen
+                                    <a role="menuitem" tabindex="-1" href="#" data-lock-screen="true"><i class="fa-solid fa-user-lock"></i> Bloquear pantalla
                                     </a>
                                 </li>
                                 <li>
-                                    <a role="menuitem" tabindex="-1" asp-area="Identity" asp-page="/Account/Register"><i
-                                            class="fa fa-lock"></i> Registrar</a>
+                                    <a role="menuitem" tabindex="-1" asp-area="Identity" asp-page="/Account/Register"><i class="fa-solid fa-address-card"></i> Registrar</a>
                                 </li>
                                 <li>
-                                    <a role="menuitem" tabindex="-1" href="#modalIcon">
-                                        <i class="fa fa-power-off"></i> Logout
-                                    </a>
+                                    <a class="mb-xs mt-xs mr-xs modal-basic" href="#modalIcon"><i class="fa-solid fa-right-from-bracket"></i> Salir</a>
                                 </li>
                             </ul>
                         </div>
@@ -349,7 +343,7 @@
                                     <ul class="nav nav-main">
                                         <li class="nav-active">
                                             <a href="layouts-default.html">
-                                               <i class="fa-solid fa-chart-line"></i>
+                                                <i class="fa-solid fa-chart-line"></i>
                                                 <span>Dashboard</span>
                                             </a>
                                         </li>
@@ -507,33 +501,38 @@
             </div>
         </aside>
     </section>
+    <!-- Modal Icon -->
 
-<!-- Modal Icon -->
-									<div id="modalIcon" class="modal-block modal-block-primary mfp-hide">
-										<section class="panel">
-											<header class="panel-heading">
-												<h2 class="panel-title">Are you sure?</h2>
-											</header>
-											<div class="panel-body">
-												<div class="modal-wrapper">
-													<div class="modal-icon">
-														<i class="fa fa-question-circle"></i>
-													</div>
-													<div class="modal-text">
-														<p>Are you sure that you want to delete this image?</p>
-													</div>
-												</div>
-											</div>
-											<footer class="panel-footer">
-												<div class="row">
-													<div class="col-md-12 text-right">
-														<button class="btn btn-primary modal-confirm">Confirm</button>
-														<button class="btn btn-default modal-dismiss">Cancel</button>
-													</div>
-												</div>
-											</footer>
-										</section>
-									</div>
+
+    <div id="modalIcon" class="modal-block modal-block-primary mfp-hide">
+        <section class="panel">
+            <header class="panel-heading">
+                <h2 class="panel-title">¿Listo/a para salir?</h2>
+            </header>
+            <div class="panel-body">
+                <div class="modal-wrapper">
+                    <div class="modal-icon">
+                        <i class="fa fa-question-circle"></i>
+                    </div>
+                    <div class="modal-text">
+                        <p>Seleccione "Cerrar sesión" a continuación si está listo para finalizar su sesión actual.</p>
+                    </div>
+                </div>
+            </div>
+            <footer class="panel-footer">
+                <div class="row">
+                    <div class="col-md-12 text-right">
+                        <form asp-area="Identity" asp-page="/Account/Logout"
+                            asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                            <button type="submit" class="btn btn-danger">Cerrar sesión</button>
+                            <button class="btn btn-default modal-dismiss">Cancelar</button>
+                        </form>
+                    </div>
+                </div>
+            </footer>
+        </section>
+    </div>
+
 
     <environment include="Development">
         <!-- Vendor -->
@@ -558,8 +557,8 @@
 
         <!-- Theme Initialization Files -->
         <script src="/template/assets/javascripts/theme.init.js"></script>
-        		<!-- Examples -->
-		<script src="/template/assets/javascripts/ui-elements/examples.modals.js"></script>
+        <!-- Examples -->
+        <script src="/template/assets/javascripts/ui-elements/examples.modals.js"></script>
 
         <script type="text/javascript"
             src="//cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.12.1/af-2.4.0/b-2.2.3/b-colvis-2.2.3/b-html5-2.2.3/b-print-2.2.3/cr-1.5.6/date-1.1.2/fc-4.1.0/fh-3.2.4/kt-2.7.0/r-2.3.0/rg-1.2.0/rr-1.2.8/sc-2.0.7/sb-1.3.4/sp-2.0.2/sl-1.4.0/sr-1.1.1/datatables.min.js"></script>
