--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -359,9 +359,9 @@
                                                     </a>
                                                     <ul class="nav nav-children">
                                                         <li>
-                                                            <a asp-area="Catalogs" asp-controller="Areas" asp-action="Index"
+                                                            <a asp-area="Catalogs" asp-controller="Departamentos" asp-action="Index"
                                                                 class="menu-link">
-                                                                <div data-i18n="">Áreas</div>
+                                                                <div data-i18n="">Departamentos</div>
                                                             </a>
 
                                                         </li>
