--- a/Areas/Catalogs/Views/Departamentos/Create.cshtml
+++ b/Areas/Catalogs/Views/Departamentos/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AuthoringTagHelpers
-@model ease_admin_cloud.Areas.Catalogs.Models.cat_area
+@model ease_admin_cloud.Areas.Catalogs.Models.cat_departamento
 
 @{
     ViewData["Title"] = "Create";
@@ -16,15 +16,15 @@
                         Área</h4>
                 </header>
                 <div class="panel-body">
-                    <label class="col-md-3 control-label" asp-for="area_desc"></label>
+                    <label class="col-md-3 control-label" asp-for="departamento_desc"></label>
                     <div class="col-md-6">
                         <div class="input-group input-group-icon">
-                            <input type="text" class="form-control" placeholder="Área" asp-for="area_desc">
+                            <input type="text" class="form-control" placeholder="Área" asp-for="departamento_desc">
                             <span class="input-group-addon">
                                 <span class="icon"><i class="fa-solid fa-briefcase"></i></span>
                             </span>
                         </div>
-                       <span asp-validation-for="area_desc" class="text-danger"></span>
+                       <span asp-validation-for="departamento_desc" class="text-danger"></span>
                     </div>
                 </div>
                 <footer class="panel-footer">
