--- a/Areas/Catalogs/Views/Departamentos/Details.cshtml
+++ b/Areas/Catalogs/Views/Departamentos/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AuthoringTagHelpers
-@model ease_admin_cloud.Areas.Catalogs.Models.cat_area
+@model ease_admin_cloud.Areas.Catalogs.Models.cat_departamento
 
 @{
     ViewData["Title"] = "Details";
@@ -18,10 +18,10 @@
                 <div class="panel-body">
                      <dl class="row">
                         <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.area_desc)
+                            @Html.DisplayNameFor(model => model.departamento_desc)
                         </dt>
                         <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.area_desc)
+                            @Html.DisplayFor(model => model.departamento_desc)
                         </dd>
                         <dt class="col-sm-2">
                             @Html.DisplayNameFor(model => model.id_usuario_modifico)
